# vulgata

./: .gitignore  Cargo.toml  LICENSE  README.md  vulgata_spec.md
.claude/skills/vulgata-lang/: skill.md
.github/workflows/: release.yaml
docs/: 01_vulgata_spec_intro.md  02_vulgata_spec_language_reference.md  03_vulgata_spec_execution_model.md  04_vulgata_spec_implementation_contract.md  vulgata_spec_v0.5.0.md  vulgata_spec_v0.6.0.md
docs/obsolete/: vulgata_spec_v0.5.0.md
examples/: runtime_io.vg  sort.vg  vaultpack.vg  vaultpack_withouth_match_and_desctructuring.vg
images/: vulgata-logo-small.xcf
openspec/changes/add-binding-destructuring/: design.md  proposal.md  tasks.md
openspec/changes/add-initial-runtime-lib/: design.md  proposal.md  tasks.md
openspec/changes/add-match-statement/: design.md  proposal.md  tasks.md
scripts/: gen_doc.py
skills/vulgata-lang/: skill.md
spec/: Semantic Layers and Non-Executable Constructs.md  initial_runtime_lib.md  match-and-destructuring-extension.md  native-result-and-option-operations.md  refactor_mutability.md  vulgata_repl.md  vulgata_spec_v0.4.md
spec/obsolete/: vulgata_mutability_note.md  vulgata_spec_v0.2.md  vulgata_spec_v0.3.md
src/: ast.rs  cli.rs  codegen.rs  diagnostics.rs  externs.rs  lexer.rs  lib.rs  main.rs  metadata.rs  parser.rs  repl.rs  resolver.rs  runtime.rs  standard_runtime.rs  tir.rs  types.rs
syntax/: README.md  language-configuration.json
syntax/vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package.json
tests/: conformance.rs
(+68 files in other folders)
